--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI=mongodb+srv://profile_user:profile123@cluster0.qsvsbku.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=supersecret
-EMAIL_ID=raycabackend@gmail.com
-PASSWORD=wtydiixrhnavusod
+EMAILID=dev.athrey@gmail.com
+PASSWORD=gqzmenhybagjtwvx
